<resources>
    <string name="miv_last_version_title">Version 1.8</string>
    <string name="miv_mod1_title">ANDROID 7 NOUGAT</string>
    <string name="miv_mod1_text">App shortcuts for quickly adding expenses, earnings and budgets. Android 7 support. Bugs fixed.</string>
    <string name="generic_delete">Delete</string>
    <string name="generic_of">of</string>
    <string name="generic_loading_data">caricamento...</string>
    <string name="generic_expenses">Expenses</string>
    <string name="generic_earning">Earnings</string>
    <string name="frag_balance_title">Overview</string>
    <string name="frag_balance_earnings">Earnings</string>
    <string name="frag_balance_expenses">Expenses</string>
    <string name="frag_balance_future_earnings">Future earnings</string>
    <string name="frag_balance_future_expenses">Future expenses</string>
    <string name="frag_balance_chart_title">Income/Expense</string>
    <string name="eed_exchange">exc</string>
    <string name="transitionName">transitionIcon</string>
    <string name="budgets_show">show...</string>
    <string name="budgets_hide">hide...</string>
    <string name="budgets_no_expenses">no expenses</string>
    <plurals name="budgets_num_expenses">
        <item quantity="one">%d expense</item>
        <item quantity="other">%d expenses</item>
    </plurals>
    <string name="budgets_maxmin">Max: %1$s - Min: %2$s</string>
    <string name="budgets_chart_scroll">Touch to show\/hide...</string>
    <string name="budgets_chart_spent">spent</string>
    <string name="budgets_chart_left">left</string>
    <string name="budgets_chart_title">Budget</string>
    <string name="budgets_history_multiple">multiple</string>
    <string name="widget_small_balance">Balance</string>
    <string name="temp_timespan_short">01/01/17 - 31/01/17</string>
    <string name="shortcuts_expense_short">Add expense</string>
    <string name="shortcuts_expense_long">Add a new expense and update open budgets</string>
    <string name="shortcuts_expense_disabled">Add expense</string>
    <string name="shortcuts_earning_short">Add earning</string>
    <string name="shortcuts_earning_long">Add a new earning and update</string>
    <string name="shortcuts_earning_disabled">Add earning</string>
    <string name="shortcuts_favorite_short">Add favorite</string>
    <string name="shortcuts_favorite_long">Add a new expense from the favorites</string>
    <string name="shortcuts_favorite_disabled">Add favorite</string>
    <string name="app_name">Personal Budget</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_spese">Expenses</string>
    <string name="tab_entrate">Earnings</string>
    <string name="tab_saldo">Balance</string>
    <string name="tab_budget">Budget</string>
    <string name="menu_intervallo">Timespan</string>
    <string name="menu_inizia_da">Start:</string>
    <string name="menu_termina_a">End:</string>
    <string name="seleziona">Select</string>
    <string name="cancella">Cancel</string>
    <string name="ok">OK</string>
    <string name="periodo_errore">Final date cannot be before start date!</string>
    <string name="menu_periodo_ultimi_30_gg">Last 30 days</string>
    <string name="menu_periodo_prossimi_30_gg">Next 30 days</string>
    <string name="menu_periodo_mese_corrente">Current month</string>
    <string name="menu_periodo_sempre">Always</string>
    <string name="menu_periodo_nessuna">None</string>
    <string name="menu_periodo_scelte_rapide">Quick choice:</string>
    <string name="dettagli_voce_dettagli_spesa">Expense details</string>
    <string name="dettagli_voce_dettagli_entrata">Earning details</string>
    <string name="dettagli_voce_tag">Tag:</string>
    <string name="dettagli_voce_data">Date</string>
    <string name="dettagli_voce_descrizione">Description</string>
    <string name="dettagli_voce_elimina">Delete</string>
    <string name="dettagli_voce_modifica">Edit</string>
    <string name="dettagli_voce_prezzo">Amount</string>
    <string name="dettagli_voce_conferma_elimina_titolo">Confirm delete?</string>
    <string name="dettagli_voce_conferma_elimina_msg">Are you sure to delete the selected element?</string>
    <string name="aggiungi_spese_aggiungi_spesa">Add expense</string>
    <string name="aggiungi_spese_inserisci_tag">Insert new tags here&#8230;</string>
    <string name="aggiungi_spese_aggiungi">Add</string>
    <string name="aggiungi_spese_data">Date&#8230;</string>
    <string name="aggiungi_spese_selezionaData">Select date&#8230;</string>
    <string name="aggiungi_spese_oggi">Today</string>
    <string name="aggiungi_spese_ieri">Yesterday</string>
    <string name="aggiungi_spese_descrizione">Insert description here&#8230;</string>
    <string-array name="aggiungi_voce_tipo_ripetizione">
        <item>Day by day insert</item>
        <item>Batch insert</item>
    </string-array>
    <string-array name="ripetizioni">
        <item>No repetition</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>Working days</item>
        <item>Weekends</item>
    </string-array>
    <string-array name="ripetizioni_budget">
        <item>Una tantum</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="aggiungi_spese_errore">Error! At least one tag must be specified!</string>
    <string name="aggiungi_spese_fine_ripetizione">Repeat expense until:</string>
    <string name="aggiungi_spese_mai">Never</string>
    <string name="aggiungi_spese_fino_alla_data">Until date:</string>
    <string name="aggiungi_spese_numero_ripetizioni">For x times:</string>
    <string name="dettagli_voce_ripetizione">Repetition</string>
    <string name="dettagli_voce_fine_ripetizione">End of repetition</string>
    <string name="dettagli_voce_elimina_ripetute_titolo">This is a repeated item. Which item do you want to delete?</string>
    <string-array name="dettagli_voce_elimina_ripetute_scelte">
        <item>Only this item</item>
        <item>All repeated items</item>
        <item>Items from today</item>
    </string-array>
    <plurals name="dettagli_voce_x_voci_eliminate">
        <item quantity="one">1 element has been deleted!</item>
        <item quantity="other">%1$d elements have been deleted!</item>
    </plurals>
    <string name="aggiungi_spese_altro_giorno">Other</string>
    <string name="aggiungi_spese_modifica_spesa">Edit expense</string>
    <string name="toast_spesa_aggiunta">1 expense added!</string>
    <string name="toast_spesa_modificata">1 expense modified!</string>
    <string name="toast_errore_inserimento">Error while inserting the item!</string>
    <string name="menu_aggiorna_database">Update database</string>
    <string name="aggiungi_entrate_aggiungi_entrata">Add earning</string>
    <string name="aggiungi_entrate_modifica_entrata">Edit earning</string>
    <string name="toast_entrata_aggiunta">1 earning added!</string>
    <string name="toast_entrata_modificata">1 earning modified!</string>
    <string name="budget_dettaglio_titolo">Budget details</string>
    <string name="budget_dettaglio_scadenza">Expiry date</string>
    <string name="budget_dettaglio_speseincluse">Expenses list</string>
    <string name="budget_dettaglio_riepilogobudget">Budgets list</string>
    <string name="budget_dettaglio_modifica">Edit</string>
    <string name="budget_dettaglio_utilizzato">used</string>
    <string name="budget_dettaglio_rimanente">left</string>
    <string name="budget_budgetanaloghi_riepilogobudget">Budget summary</string>
    <string name="budget_budgetanaloghi_risparmiato">saved</string>
    <string name="budget_budgetanaloghi_ecceduto">exceeded</string>
    <string name="budget_aggiungi_aggiungibudget">Add budget</string>
    <string name="budget_aggiungi_ripetizione">Repetition&#8230;</string>
    <string name="budget_aggiungi_selezionatag">Tags&#8230;</string>
    <string name="budget_dettaglio_elimina">Delete</string>
    <string name="menu_esporta">Export database</string>
    <string name="valute_elencoValute_Codice">Currency code:</string>
    <string name="valute_elencoValute_simbolo">Symbol:</string>
    <string name="preferenze_generale">General</string>
    <string name="preferenze_generale_valuta_titolo">Main currency</string>
    <string name="preferenze_generale_valuta_descrizione">Change the app\'s main currency&#8230;</string>
    <string name="menu_preferenze">Preferences</string>
    <string name="preferenze_sicurezza_password_ON">ON</string>
    <string name="preferenze_sicurezza_password_OFF">OFF</string>
    <string name="preferenze_sicurezza_password_proteggiAppConPassword">Protect app with password</string>
    <string name="preferenze_sicurezza_password_password">Password</string>
    <string name="preferenze_sicurezza_password_scriviPassword">Type password here&#8230;</string>
    <string name="preferenze_sicurezza_password_OK">OK</string>
    <string name="preferenze_sicurezza_password_annulla">Cancel</string>
    <string name="preferenze_sicurezza">Security</string>
    <string name="password_OK">OK</string>
    <string name="password_annulla">Cancel</string>
    <string name="password_hintScriviPassword">Type password here&#8230;</string>
    <string name="preferenze_altro">Other</string>
    <string name="preferenze_altro_suoni_ON">ON</string>
    <string name="preferenze_altro_suoni_OFF">OFF</string>
    <string name="preferenze_altro_suoni_abilitaSuoni">Enable app sounds</string>
    <string name="preferenze_generale_reminder_ON">ON</string>
    <string name="preferenze_generale_reminder_OFF">OFF</string>
    <string name="preferenze_generale_reminder_descrizione">Remind me to register my expenses and budget status</string>
    <string name="preferenze_generale_reminder_titolo">Reminder</string>
    <string name="preferenze_altro_suoni_titolo">App sounds</string>
    <string name="menu_ricerca">Search</string>
    <string name="preferenze_generale_tags_titolo">Edit tags</string>
    <string name="preferenze_generale_tags_descrizione">Edit tags for your expenses and earnings</string>
    <string name="menu_visualizzaPerVoce">By item</string>
    <string name="menu_visualizzaStats">Charts</string>
    <string name="budget_dettaglio_tipoBudget">Budget type</string>
    <string name="budget_dettaglio_importo">Amount</string>
    <string name="budget_dettaglio_speso">Spent</string>
    <string name="preferenze_sicurezza_password_noPasswordSet">No password set</string>
    <string name="menu_info">Info</string>
    <string name="menu_backuprestore">Backup/restore database</string>
    <string name="provv_importoValutaZero">€ 0,00</string>
    <string name="provv_contenutoImmagini">descrizione immagine</string>
    <string name="provv_simboloEuro">€</string>
    <string name="provv_data">1/1/2014</string>
    <string name="provv_lorem_ipsum_2">lorem ipsum lorem ipsum</string>
    <string name="provv_lorem_ipsum">lorem ipsum</string>
    <string name="provv_mese_APR">APR</string>
    <string name="lowndes_tips_spesa_1">Well done! You\'ve correctly inserted your first expense. Keep it up!</string>
    <string name="lowndes_tips_disabilita_suggerimenti">disable Lowndes tips</string>
    <string name="preferenze_altro_lowndestips_titolo">Lowndes tips&#8230;</string>
    <string name="preferenze_altro_lowndestips_ON">ON</string>
    <string name="preferenze_altro_lowndestips_OFF">OFF</string>
    <string name="preferenze_altro_lowndestips_abilitaTips">Enable William Lowndes\' tips</string>
    <string name="provv_ora">14:55:56</string>
    <string name="menu_backuprestore_backupAutomatico">Auto backup</string>
    <string name="budget_dettaglio_duplica">Duplicate</string>
</resources>