<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_gruppoPrincipale">
     
    <item
    	android:id="@+id/menu_intervalloTempo"
    	app:showAsAction="never"
    	android:icon="@drawable/ic_device_access_data_usage"
    	android:title="@string/menu_intervallo"/>

    <item
        android:id="@+id/menu_ricerca"
        android:title="@string/menu_ricerca"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/menu_stats"
        android:title="@string/menu_visualizzaStats"
        android:icon="@drawable/ic_device_access_network_cell"
        app:showAsAction="never"/>
    
    <item 
        android:id="@+id/menu_esporta"
        app:showAsAction="never"
        android:icon="@drawable/ic_av_download"
        android:title="@string/menu_esporta"/>
    
    <item 
        android:id="@+id/menu_backuprestore"
        app:showAsAction="never"
        android:icon="@drawable/ic_av_download"
        android:title="@string/menu_backuprestore"/>
    
    <item
        android:id="@+id/menu_visualizzaPerVoce"
        android:title="@string/menu_visualizzaPerVoce"
        android:icon="@drawable/ic_collections_labels"
        app:showAsAction="ifRoom"/>

    <item 
     	android:id="@+id/menu_preferenze"
     	app:showAsAction="never"
     	android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_preferenze"/>
    
    <item 
        android:id="@+id/menu_info"
        android:title="@string/menu_info"
        android:icon="@drawable/ic_action_about"/>

	</group>
	
</menu>