<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) - Software developed by iClaude.
  -->


<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/data_expanded"
    android:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@drawable/background_primarylight_roundcorners">

    <ImageView
        android:src="@drawable/ic_action_view_as_list"
        android:background="@drawable/background_tondo_grigio"
        android:padding="12dp"
        android:elevation="6dp"
        android:id="@+id/imageView3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription=""
        android:layout_marginTop="4dp" />

    <TextView
        android:text="@string/budget_dettaglio_importo"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp" />

    <TextView
        android:id="@+id/tvAmount"
        android:text="@string/provv_importoValutaZero"
        app:layout_constraintTop_toTopOf="@+id/textView18"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/budget_dettaglio_speso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView20"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintLeft_toLeftOf="@+id/textView18"
        app:layout_constraintRight_toLeftOf="@+id/tvSpent"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:text="@string/provv_importoValutaZero"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSpent"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp" />

    <TextView
        android:text="@string/budget_dettaglio_tipoBudget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintLeft_toLeftOf="@+id/textView20"
        android:layout_marginTop="4dp" />

    <TextView
        android:text="@string/provv_lorem_ipsum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBudgetType"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

    <TextView
        android:text="@string/budget_dettaglio_scadenza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        app:layout_constraintLeft_toLeftOf="@+id/textView22" />

    <TextView
        android:text="@string/provv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEndDate"
        app:layout_constraintTop_toTopOf="@+id/textView24"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp" />


</android.support.constraint.ConstraintLayout>
