<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp" >

    <ImageView
        android:id="@+id/menu_backuprestore_listview_item_ivBackup"
        android:contentDescription="@string/provv_contenutoImmagini"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/img_backup" />

    <TextView
        android:id="@+id/menu_backuprestore_listview_item_tvBackup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/menu_backuprestore_listview_item_ivBackup"
        android:layout_toRightOf="@id/menu_backuprestore_listview_item_ivBackup"
        android:text="@string/menu_backuprestore_backupAutomatico"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@color/text_primary" />

    <TextView
        android:id="@+id/menu_backuprestore_listview_item_tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_backuprestore_listview_item_tvBackup"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_toRightOf="@id/menu_backuprestore_listview_item_ivBackup"
        android:layout_toEndOf="@id/menu_backuprestore_listview_item_ivBackup"
        android:text="@string/provv_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_secondary" />

    <TextView
        android:id="@+id/menu_backuprestore_listview_item_tvOra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/menu_backuprestore_listview_item_tvData"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/menu_backuprestore_listview_item_tvBackup"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="bottom"
        android:text="@string/provv_ora"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_secondary" />

</RelativeLayout>
