<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) This code was written by iClaude. All rights reserved.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/ic_today_black_48dp"
        android:id="@+id/imageView5"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:alpha="0.5" />

    <TextView
        android:text="@string/provv_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDate"
        android:textColor="?android:attr/textColorSecondary"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/tvAmount"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textStyle="normal|bold"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:text="@string/provv_lorem_ipsum_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintLeft_toLeftOf="@+id/tvDate"
        app:layout_constraintRight_toRightOf="@+id/tvDate"
        android:ellipsize="end"
        android:layout_marginTop="4dp" />

    <TextView
        android:text="@string/provv_lorem_ipsum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvAccount"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        android:layout_marginLeft="8dp" />

    <TextView
        android:text="@string/provv_importoValutaZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAmount"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintTop_toTopOf="@+id/tvDate"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:textStyle="normal|bold"
        android:textSize="14sp" />

    <View
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/vLine"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAccount"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>